# Connector_Detection

./: README.md  main.py  pyproject.toml
configs/: dinobank.example.toml  dinomaly.example.toml  patchcore.example.toml  patchcore_body.yaml  patchcore_pin.yaml  pipeline.example.toml
connector_detection/: __init__.py  centroid.py  cli.py  clustering.py  compare.py  config.py  dinobank.py  dinomaly.py  dual_branch.py  evaluation.py  features.py  foundation_clustering.py  images.py  patchcore.py  review.py  structural_features.py  visualize.py  voc.py
scripts/: localize_pins.py  normalize_orientation.py  train_patchcore.py  validate_patchcore.py
src/connector_detection/: __init__.py  cli.py  orientation.py  pin_localization.py
src/connector_detection/commands/: localize.py  normalize.py  train.py  validate.py
