[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connector-detection"
version = "0.1.0"
description = "AI+AOI connector defect detection system"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "anomalib>=2.5.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "typer>=0.15.0",
    "ultralytics>=8.4.65",
    "pyyaml>=6.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.9.0",
    "opencv-python>=4.13.0",
    "torch>=2.11.0",
]

[project.scripts]
normalize-orientation = "connector_detection.cli:normalize_orientation_cli"
train-patchcore = "connector_detection.cli:train_patchcore_cli"
validate-patchcore = "connector_detection.cli:validate_patchcore_cli"
localize-pins = "connector_detection.cli:localize_pins_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
